--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -1,119 +1,123 @@
 .hero {
-	position: relative;
-	color: $white;
+  position: relative;
+  color: $white;
 }
 
 .hero__preview {
-	position: relative;
+  position: relative;
 
-	&::before {
-		content: '';
-		padding-top: 180.0625%; // height / width ratio
-		display: block;
-	}
+  &::before {
+    content: "";
+    padding-top: 180.0625%; // height / width ratio
+    display: block;
+  }
 }
 
 .hero__img {
-	position: absolute;
-	inset: 0;
-	background-size: cover;
-	background-position: 35%;
-	background-repeat: no-repeat;
-	z-index: -1;
-	display: flex;
-	align-items: flex-end;
+  position: absolute;
+  inset: 0;
+  background-size: cover;
+  background-position: 35%;
+  background-repeat: no-repeat;
+  z-index: -1;
+  display: flex;
+  align-items: flex-end;
 
-	&::after {
-		content: '';
-		background: black;
-		opacity: 0.5;
-		width: 100%;
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		z-index: -1;
-	}
+  &::after {
+    content: "";
+    background: black;
+    opacity: 0.5;
+    width: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+  }
 }
 
 .hero__eyebrow {
-	font-size: 10px;
-	line-height: 12px;
-	font-weight: 700;
-	background-color: $anzac;
-	padding: 6px;
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 700;
+  background-color: $anzac;
+  padding: 6px;
 }
 
 .hero__headline {
-	margin: 9px 0 88px;
-	font-weight: 800;
-	font-size: 24px;
-	line-height: 29px;
+  margin: 9px 0 88px;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 29px;
 }
 
 @media #{$media-min-mobile} {
-	.hero__preview {
-		max-height: 100%;
+  .hero__preview {
+    max-height: 100%;
 
-		&::before {
-			padding-top: 133.33%; // height/width ratio
-		}
-	}
+    &::before {
+      padding-top: 133.33%; // height/width ratio
+    }
+  }
 
-	.hero__img {
-		&::after {
-			content: '';
-			background: black;
-			opacity: 0.5;
-			width: 100%;
-			display: block;
-			position: absolute;
-			top: 0;
-			left: 0;
-			bottom: 0;
-		}
-	}
+  .hero__img {
+    &::after {
+      content: "";
+      background: black;
+      opacity: 0.5;
+      width: 100%;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+    }
+  }
 
-	.hero__eyebrow {
-		font-size: 12px;
-		line-height: 15px;
-	}
+  .hero__eyebrow {
+    font-size: 12px;
+    line-height: 15px;
+  }
 
-	.hero__headline {
-		margin: 8px 0 35px;
-		font-size: 48px;
-		line-height: 59px;
-	}
+  .hero__headline {
+    margin: 8px 0 35px;
+    font-size: 48px;
+    line-height: 59px;
+  }
 }
 
 @media #{$media-min-tablet-landscape} {
-	.hero__preview {
-		&::before {
-			padding-top: 47.7%; // height/width ratio
-		}
+  .hero__preview {
+    &::before {
+      padding-top: 47.7%; // height/width ratio
+    }
 
-		.hero__img {
-			&::after {
-				background: linear-gradient(
-					to bottom,
-					rgba(0, 0, 0, 1) 0%,
-					rgba(0, 0, 0, 0) 100.09%
-				);
-				opacity: 1;
-				bottom: 0;
-			}
-		}
-	}
+    .hero__img {
+      &::after {
+        background: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 1) 0%,
+          rgba(0, 0, 0, 0) 100.09%
+        );
+        opacity: 1;
+        bottom: 0;
+      }
+    }
+  }
 
-	.hero__eyebrow {
-		font-size: 12px;
-		line-height: 15px;
-	}
+  .hero__wrapper {
+    margin-left: 88px;
+  }
 
-	.hero__headline {
-		margin: 8px 0 37px;
-		font-size: 60px;
-		line-height: 73px;
-	}
+  .hero__eyebrow {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .hero__headline {
+    margin: 8px 0 37px;
+    font-size: 60px;
+    line-height: 73px;
+  }
 }
