--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -6,6 +6,13 @@
 	z-index: 10;
 }
 
+.header__logo {
+	font-size: 24px;
+	font-weight: 900;
+	color: $white;
+	text-align: center;
+}
+
 .header__translate {
 	display: none;
 }
@@ -37,6 +44,7 @@
 	height: 40px;
 	width: 40px;
 	cursor: pointer;
+	flex-shrink: 0;
 }
 
 .header__img {
